Pinguino IDE 12.0 - Beta 1
------------------------

Oct. 03, 2015

Features

* Separated Python Shell and Debugger tabs
* Moved stdout to bottom tab
* Added Project and Libraries manager
* Moved boards selector to lateral tab
* All tabs are toggleable
* Added submit bug report system
* Better integration between clasic code and blocks files
* Tabs areas can be fully resized
* Script only for command line (pinguino_cmd.py)


Pinguino IDE 11.0 - Beta 3
--------------------------

Dec. 22, 2014

Features

* Added regression.sh to test all examples for one board
  (still one bug to fix: AttributeError: 'Pinguino' object has no attribute 'MAKE')
* Added debugging files
* Added Python3 compatibility
* Added development mode (--dev commandline)
* Hide menubar

Improves

* uploader32.py (getDeviceID, getDeviceFlash, getDeviceFamily)
* pinguino_tools.py (code size calculation)
* Saving perspectives
* Hide autocompleter from taskbar

Bug Fixes

* Icons size not saved
* Icons theme not saved
* Python shell and tools close when minimize
* Insert block dialog only search on labels
* Bad code generation in graphic development interface
* ICSP disabled
* Last graphical or text mode used is not saved
* Shell, Tools or Editors windows locations not saved (Icons Theme as well)


Pinguino IDE 11.0 - Beta 2
--------------------------

August 20, 2014

Features

* Added post_install.py for complete instalation
* Added themes features
* Added views for main.c, user.c and define.h
* Added option for upload .hex directly

Improves

* Remove unnecessary files, like images and fonts

Bug Fixes

* "Save as" not work with unsaved files
* IDE not use default fonts
* Some files are unnecessary
* Missing icons on toolbar and graphical development


##################################################
Pinguino IDE 11.0 - Beta 1
--------------------------

June 7, 2014

Features

* Added language support
* Added Spanish translation by Yeison Cardona
* Added Japanesse translation by "avrin"