@@ -124,10 +124,10 @@ class uploader32(baseUploader):
     READ_DEVICE_CMD                 =    0x07    # the host sends this command in order to read out memory from the device. Used during verify (and read/export hex operations)
     RESET_DEVICE_CMD                =    0x08    # resets the microcontroller, so it can update the config bits (if they were programmed, and so as to leave the bootloader (and potentially go back into the main application)
 
-    READ_DEVICE_CMD_SUPPORTED       =   False
-    QUERY_DEVICE_CMD_SUPPORTED      =   False
-    READ_DEVICE_BUFFER              =   []
-    QUERY_DEVICE_BUFFER             =   []
+    READ_DEVICE_CMD_SUPPORTED       =    False
+    QUERY_DEVICE_CMD_SUPPORTED      =    False
+    READ_DEVICE_BUFFER              =    []
+    QUERY_DEVICE_BUFFER             =    []
 
     # Query Device Response
     # ----------------------------------------------------------------------
@@ -147,6 +147,9 @@ class uploader32(baseUploader):
     DEVICE_FAMILY_PIC18             =    0x01
     DEVICE_FAMILY_PIC24             =    0x02
     DEVICE_FAMILY_PIC32             =    0x03
+    DEVICE_FAMILY_MX1               =    0x81
+    DEVICE_FAMILY_MX3               =    0x82
+    DEVICE_FAMILY_MZ                =    0x83
 
     # Configuration
     # ----------------------------------------------------------------------
@@ -165,128 +168,6 @@ class uploader32(baseUploader):
     # device_id:['CPU name']
     #-----------------------------------------------------------------------
     """
-    : ['32MX110F016B'], 0x04A07053
-    : ['32MX110F016C'], 0x04A09053
-    : ['32MX110F016D'], 0x04A0B053
-    : ['32MX120F032B'], 0x04A06053
-    : ['32MX120F032C'], 0x04A08053
-    : ['32MX120F032D'], 0x04A0A053
-    : ['32MX130F064B'], 0x04D07053
-    : ['32MX130F064C'], 0x04D09053
-    : ['32MX130F064D'], 0x04D0B053
-    : ['32MX150F128B'], 0x04D06053
-    : ['32MX150F128C'], 0x04D08053
-    : ['32MX150F128D'], 0x04D0A053
-    : ['32MX210F016B'], 0x04A01053
-    : ['32MX210F016C'], 0x04A03053
-    : ['32MX210F016D'], 0x04A05053
-    : ['32MX220F032B'], 0x04A00053
-    : ['32MX220F032C'], 0x04A02053
-    : ['32MX220F032D'], 0x04A04053
-    : ['32MX230F064B'], 0x04D01053
-    : ['32MX230F064C'], 0x04D03053
-    : ['32MX230F064D'], 0x04D05053
-    : ['32MX250F128B'], 0x04D00053
-    : ['32MX250F128C'], 0x04D02053
-    : ['32MX250F128D'], 0x04D04053
-
-    : ['32MX330F064H'], 0x05600053
-    : ['32MX330F064L'], 0x05601053
-    : ['32MX430F064H'], 0x05602053
-    : ['32MX430F064L'], 0x05603053
-    : ['32MX350F128H'], 0x0570C053
-    : ['32MX350F128L'], 0x0570D053
-    : ['32MX450F128H'], 0x0570E053
-    : ['32MX450F128L'], 0x0570F053
-    : ['32MX350F256H'], 0x05704053
-    : ['32MX350F256L'], 0x05705053
-    : ['32MX450F256H'], 0x05706053
-    : ['32MX450F256L'], 0x05707053
-    : ['32MX370F512H'], 0x05808053
-    : ['32MX370F512L'], 0x05809053
-    : ['32MX470F512H'], 0x0580A053
-    : ['32MX470F512L'], 0x0580B053
-
-    : ['32MX360F512L'], 0x00938053
-    : ['32MX360F256L'], 0x00934053
-    : ['32MX340F128L'], 0x0092D053
-    : ['32MX320F128L'], 0x0092A053
-    : ['32MX340F512H'], 0x00916053
-    : ['32MX340F256H'], 0x00912053
-    : ['32MX340F128H'], 0x0090D053
-    : ['32MX320F128H'], 0x0090A053
-    : ['32MX320F064H'], 0x00906053
-    : ['32MX320F032H'], 0x00902053
-    : ['32MX460F512L'], 0x00978053
-    : ['32MX460F256L'], 0x00974053
-    : ['32MX440F128L'], 0x0096D053
-    : ['32MX440F256H'], 0x00952053
-    : ['32MX440F512H'], 0x00956053
-    : ['32MX440F128H'], 0x0094D053
-    : ['32MX420F032H'], 0x00942053
-
-    : ['32MX534F064H'], 0x04400053
-    : ['32MX534F064L'], 0x0440C053
-    : ['32MX564F064H'], 0x04401053
-    : ['32MX564F064L'], 0x0440D053
-    : ['32MX564F128H'], 0x04403053
-    : ['32MX564F128L'], 0x0440F053
-    : ['32MX575F256H'], 0x04317053
-    : ['32MX575F256L'], 0x04333053
-    : ['32MX575F512H'], 0x04309053
-    : ['32MX575F512L'], 0x0430F053
-    : ['32MX664F064H'], 0x04405053
-    : ['32MX664F064L'], 0x04411053
-    : ['32MX664F128H'], 0x04407053
-    : ['32MX664F128L'], 0x04413053
-    : ['32MX675F256H'], 0x0430B053
-    : ['32MX675F256L'], 0x04305053
-    : ['32MX675F512H'], 0x0430C053
-    : ['32MX675F512L'], 0x04311053
-    : ['32MX695F512H'], 0x04325053
-    : ['32MX695F512L'], 0x04341053
-    : ['32MX764F128H'], 0x0440B053
-    : ['32MX764F128L'], 0x04417053
-    : ['32MX775F256H'], 0x04303053
-    : ['32MX775F256L'], 0x04312053
-    : ['32MX775F512H'], 0x0430D053
-    : ['32MX775F512L'], 0x04306053
-    : ['32MX795F512H'], 0x0430E053
-    : ['32MX795F512L'], 0x04307053
-
-    : ['32MZ1024ECG064'], 0x05103053
-    : ['32MZ1024ECG100'], 0x0510D053
-    : ['32MZ1024ECG124'], 0x05117053
-    : ['32MZ1024ECG144'], 0x05121053
-    : ['32MZ1024ECH064'], 0x05108053
-    : ['32MZ1024ECH100'], 0x05112053
-    : ['32MZ1024ECH124'], 0x0511C053
-    : ['32MZ1024ECH144'], 0x05126053
-    : ['32MZ2048ECG064'], 0x05104053
-    : ['32MZ2048ECG100'], 0x0510E053
-    : ['32MZ2048ECG124'], 0x05118053
-    : ['32MZ2048ECG144'], 0x05122053
-    : ['32MZ2048ECH064'], 0x05109053
-    : ['32MZ2048ECH100'], 0x05113053
-    : ['32MZ2048ECH124'], 0x0511D053
-    : ['32MZ2048ECH144'], 0x05127053
-    : ['32MZ1024ECM064'], 0x05130053
-    : ['32MZ2048ECM064'], 0x05131053
-    : ['32MZ1024ECM100'], 0x0513A053
-    : ['32MZ2048ECM100'], 0x0513B053
-    : ['32MZ1024ECM124'], 0x05144053
-    : ['32MZ2048ECM124'], 0x05145053
-    : ['32MZ1024ECM144'], 0x0514E053
-    : ['32MZ2048ECM144'], 0x0514F053
-
-    : ['32MX170F256B'], 0x06610053
-    : ['32MX170F256D'], 0x0661A053
-    : ['32MX270F256B'], 0x06600053
-    : ['32MX270F256D'], 0x0660A053
-    """
-
-    devices_table = \
-        {
             0x04A00053: ['32MX220F032B'],
             0x04A04053: ['32MX220F032D'],
             0x04D00053: ['32MX250F128B'],
@@ -295,6 +176,149 @@ class uploader32(baseUploader):
             0x00978053: ['32MX460F512L'],
             0x0430E053: ['32MX795F512H'],
             0x04307053: ['32MX795F512L']
+    """
+
+    devices_table = \
+        {
+            # MX1/2
+            0x4A07053:['32MX110F016B',     16,   DEVICE_FAMILY_MX1],
+            0x4A09053:['32MX110F016C',     16,   DEVICE_FAMILY_MX1],
+            0x4A0B053:['32MX110F016D',     16,   DEVICE_FAMILY_MX1],
+            0x4A06053:['32MX120F032B',     32,   DEVICE_FAMILY_MX1],
+            0x4A08053:['32MX120F032C',     32,   DEVICE_FAMILY_MX1],
+            0x4A0A053:['32MX120F032D',     32,   DEVICE_FAMILY_MX1],
+            0x4D07053:['32MX130F064B',     64,   DEVICE_FAMILY_MX1],
+            0x4D09053:['32MX130F064C',     64,   DEVICE_FAMILY_MX1],
+            0x4D0B053:['32MX130F064D',     64,   DEVICE_FAMILY_MX1],
+            0x4D06053:['32MX150F128B',    128,   DEVICE_FAMILY_MX1],
+            0x4D08053:['32MX150F128C',    128,   DEVICE_FAMILY_MX1],
+            0x4D0A053:['32MX150F128D',    128,   DEVICE_FAMILY_MX1],
+            0x4A01053:['32MX210F016B',     16,   DEVICE_FAMILY_MX1],
+            0x4A03053:['32MX210F016C',     16,   DEVICE_FAMILY_MX1],
+            0x4A05053:['32MX210F016D',     16,   DEVICE_FAMILY_MX1],
+            0x4A00053:['32MX220F032B',     32,   DEVICE_FAMILY_MX1],
+            0x4A02053:['32MX220F032C',     32,   DEVICE_FAMILY_MX1],
+            0x4A04053:['32MX220F032D',     32,   DEVICE_FAMILY_MX1],
+            0x4D01053:['32MX230F064B',     64,   DEVICE_FAMILY_MX1],
+            0x4D03053:['32MX230F064C',     64,   DEVICE_FAMILY_MX1],
+            0x4D05053:['32MX230F064D',     64,   DEVICE_FAMILY_MX1],
+            0x4D00053:['32MX250F128B',    128,   DEVICE_FAMILY_MX1],
+            0x4D02053:['32MX250F128C',    128,   DEVICE_FAMILY_MX1],
+            0x4D04053:['32MX250F128D',    128,   DEVICE_FAMILY_MX1],
+            0x6600053:['32MX270F256B',    256,   DEVICE_FAMILY_MX1],
+            0x6602053:['32MX270F256C',    256,   DEVICE_FAMILY_MX1],
+            0x6604053:['32MX270F256D',    256,   DEVICE_FAMILY_MX1],
+            # MX3/4/5/6/7
+            0x0902053:['32MX320F032H',     32,   DEVICE_FAMILY_MX3],
+            0x0906053:['32MX320F064H',     64,   DEVICE_FAMILY_MX3],
+            0x090A053:['32MX320F128H',    128,   DEVICE_FAMILY_MX3],
+            0x092A053:['32MX320F128L',    128,   DEVICE_FAMILY_MX3],
+            0x5600053:['32MX330F064H',     64,   DEVICE_FAMILY_MX3],
+            0x5601053:['32MX330F064L',     64,   DEVICE_FAMILY_MX3],
+            0x090D053:['32MX340F128H',    128,   DEVICE_FAMILY_MX3],
+            0x092D053:['32MX340F128L',    128,   DEVICE_FAMILY_MX3],
+            0x0912053:['32MX340F256H',    256,   DEVICE_FAMILY_MX3],
+            0x0916053:['32MX340F512H',    512,   DEVICE_FAMILY_MX3],
+            0x570C053:['32MX350F128H',    128,   DEVICE_FAMILY_MX3],
+            0x570D053:['32MX350F128L',    128,   DEVICE_FAMILY_MX3],
+            0x5704053:['32MX350F256H',    256,   DEVICE_FAMILY_MX3],
+            0x5705053:['32MX350F256L',    256,   DEVICE_FAMILY_MX3],
+            0x0934053:['32MX360F256L',    256,   DEVICE_FAMILY_MX3],
+            0x0938053:['32MX360F512L',    512,   DEVICE_FAMILY_MX3],
+            0x5808053:['32MX370F512H',    512,   DEVICE_FAMILY_MX3],
+            0x5809053:['32MX370F512L',    512,   DEVICE_FAMILY_MX3],
+            0x0942053:['32MX420F032H',     32,   DEVICE_FAMILY_MX3],
+            0x5602053:['32MX430F064H',     64,   DEVICE_FAMILY_MX3],
+            0x5603053:['32MX430F064L',     64,   DEVICE_FAMILY_MX3],
+            0x094D053:['32MX440F128H',    128,   DEVICE_FAMILY_MX3],
+            0x096D053:['32MX440F128L',    128,   DEVICE_FAMILY_MX3],
+            0x0952053:['32MX440F256H',    256,   DEVICE_FAMILY_MX3],
+            0x0956053:['32MX440F512H',    512,   DEVICE_FAMILY_MX3],
+            0x570E053:['32MX450F128H',    128,   DEVICE_FAMILY_MX3],
+            0x570F053:['32MX450F128L',    128,   DEVICE_FAMILY_MX3],
+            0x5706053:['32MX450F256H',    256,   DEVICE_FAMILY_MX3],
+            0x5707053:['32MX450F256L',    256,   DEVICE_FAMILY_MX3],
+            0x0974053:['32MX460F256L',    256,   DEVICE_FAMILY_MX3],
+            0x0978053:['32MX460F512L',    512,   DEVICE_FAMILY_MX3],
+            0x580A053:['32MX470F512H',    512,   DEVICE_FAMILY_MX3],
+            0x580B053:['32MX470F512L',    512,   DEVICE_FAMILY_MX3],
+            0x4400053:['32MX534F064H',     64,   DEVICE_FAMILY_MX3],
+            0x440C053:['32MX534F064L',     64,   DEVICE_FAMILY_MX3],
+            0x4401053:['32MX564F064H',     64,   DEVICE_FAMILY_MX3],
+            0x440D053:['32MX564F064L',     64,   DEVICE_FAMILY_MX3],
+            0x4403053:['32MX564F128H',    128,   DEVICE_FAMILY_MX3],
+            0x440F053:['32MX564F128L',    128,   DEVICE_FAMILY_MX3],
+            0x4317053:['32MX575F256H',    256,   DEVICE_FAMILY_MX3],
+            0x4333053:['32MX575F256L',    256,   DEVICE_FAMILY_MX3],
+            0x4309053:['32MX575F512H',    512,   DEVICE_FAMILY_MX3],
+            0x430F053:['32MX575F512L',    512,   DEVICE_FAMILY_MX3],
+            0x4405053:['32MX664F064H',     64,   DEVICE_FAMILY_MX3],
+            0x4411053:['32MX664F064L',     64,   DEVICE_FAMILY_MX3],
+            0x4407053:['32MX664F128H',    128,   DEVICE_FAMILY_MX3],
+            0x4413053:['32MX664F128L',    128,   DEVICE_FAMILY_MX3],
+            0x430B053:['32MX675F256H',    256,   DEVICE_FAMILY_MX3],
+            0x4305053:['32MX675F256L',    256,   DEVICE_FAMILY_MX3],
+            0x430C053:['32MX675F512H',    512,   DEVICE_FAMILY_MX3],
+            0x4311053:['32MX675F512L',    512,   DEVICE_FAMILY_MX3],
+            0x4325053:['32MX695F512H',    512,   DEVICE_FAMILY_MX3],
+            0x4341053:['32MX695F512L',    512,   DEVICE_FAMILY_MX3],
+            0x440B053:['32MX764F128H',    128,   DEVICE_FAMILY_MX3],
+            0x4417053:['32MX764F128L',    128,   DEVICE_FAMILY_MX3],
+            0x4303053:['32MX775F256H',    256,   DEVICE_FAMILY_MX3],
+            0x4312053:['32MX775F256L',    256,   DEVICE_FAMILY_MX3],
+            0x430D053:['32MX775F512H',    512,   DEVICE_FAMILY_MX3],
+            0x4306053:['32MX775F512L',    512,   DEVICE_FAMILY_MX3],
+            0x430E053:['32MX795F512H',    512,   DEVICE_FAMILY_MX3],
+            0x4307053:['32MX795F512L',    512,   DEVICE_FAMILY_MX3],
+            # MZ
+            0x5100053:['32MZ0256ECE064',  256,   DEVICE_FAMILY_MZ],
+            0x510A053:['32MZ0256ECE100',  256,   DEVICE_FAMILY_MZ],
+            0x5114053:['32MZ0256ECE124',  256,   DEVICE_FAMILY_MZ],
+            0x511E053:['32MZ0256ECE144',  256,   DEVICE_FAMILY_MZ],
+            0x5105053:['32MZ0256ECF064',  256,   DEVICE_FAMILY_MZ],
+            0x510F053:['32MZ0256ECF100',  256,   DEVICE_FAMILY_MZ],
+            0x5119053:['32MZ0256ECF124',  256,   DEVICE_FAMILY_MZ],
+            0x5123053:['32MZ0256ECF144',  256,   DEVICE_FAMILY_MZ],
+            0x5101053:['32MZ0512ECE064',  512,   DEVICE_FAMILY_MZ],
+            0x510B053:['32MZ0512ECE100',  512,   DEVICE_FAMILY_MZ],
+            0x5115053:['32MZ0512ECE124',  512,   DEVICE_FAMILY_MZ],
+            0x511F053:['32MZ0512ECE144',  512,   DEVICE_FAMILY_MZ],
+            0x5106053:['32MZ0512ECF064',  512,   DEVICE_FAMILY_MZ],
+            0x5110053:['32MZ0512ECF100',  512,   DEVICE_FAMILY_MZ],
+            0x511A053:['32MZ0512ECF124',  512,   DEVICE_FAMILY_MZ],
+            0x5124053:['32MZ0512ECF144',  512,   DEVICE_FAMILY_MZ],
+            0x5102053:['32MZ1024ECE064', 1024,   DEVICE_FAMILY_MZ],
+            0x510C053:['32MZ1024ECE100', 1024,   DEVICE_FAMILY_MZ],
+            0x5116053:['32MZ1024ECE124', 1024,   DEVICE_FAMILY_MZ],
+            0x5120053:['32MZ1024ECE144', 1024,   DEVICE_FAMILY_MZ],
+            0x5107053:['32MZ1024ECF064', 1024,   DEVICE_FAMILY_MZ],
+            0x5111053:['32MZ1024ECF100', 1024,   DEVICE_FAMILY_MZ],
+            0x511B053:['32MZ1024ECF124', 1024,   DEVICE_FAMILY_MZ],
+            0x5125053:['32MZ1024ECF144', 1024,   DEVICE_FAMILY_MZ],
+            0x5103053:['32MZ1024ECG064', 1024,   DEVICE_FAMILY_MZ],
+            0x510D053:['32MZ1024ECG100', 1024,   DEVICE_FAMILY_MZ],
+            0x5117053:['32MZ1024ECG124', 1024,   DEVICE_FAMILY_MZ],
+            0x5121053:['32MZ1024ECG144', 1024,   DEVICE_FAMILY_MZ],
+            0x5108053:['32MZ1024ECH064', 1024,   DEVICE_FAMILY_MZ],
+            0x5112053:['32MZ1024ECH100', 1024,   DEVICE_FAMILY_MZ],
+            0x511C053:['32MZ1024ECH124', 1024,   DEVICE_FAMILY_MZ],
+            0x5126053:['32MZ1024ECH144', 1024,   DEVICE_FAMILY_MZ],
+            0x5130053:['32MZ1024ECM064', 1024,   DEVICE_FAMILY_MZ],
+            0x513A053:['32MZ1024ECM100', 1024,   DEVICE_FAMILY_MZ],
+            0x5144053:['32MZ1024ECM124', 1024,   DEVICE_FAMILY_MZ],
+            0x514E053:['32MZ1024ECM144', 1024,   DEVICE_FAMILY_MZ],
+            0x5104053:['32MZ2048ECG064', 2048,   DEVICE_FAMILY_MZ],
+            0x510E053:['32MZ2048ECG100', 2048,   DEVICE_FAMILY_MZ],
+            0x5118053:['32MZ2048ECG124', 2048,   DEVICE_FAMILY_MZ],
+            0x5122053:['32MZ2048ECG144', 2048,   DEVICE_FAMILY_MZ],
+            0x5109053:['32MZ2048ECH064', 2048,   DEVICE_FAMILY_MZ],
+            0x5113053:['32MZ2048ECH100', 2048,   DEVICE_FAMILY_MZ],
+            0x511D053:['32MZ2048ECH124', 2048,   DEVICE_FAMILY_MZ],
+            0x5127053:['32MZ2048ECH144', 2048,   DEVICE_FAMILY_MZ],
+            0x5131053:['32MZ2048ECM064', 2048,   DEVICE_FAMILY_MZ],
+            0x513B053:['32MZ2048ECM100', 2048,   DEVICE_FAMILY_MZ],
+            0x5145053:['32MZ2048ECM124', 2048,   DEVICE_FAMILY_MZ],
+            0x514F053:['32MZ2048ECM144', 2048,   DEVICE_FAMILY_MZ]
         }
 
 # ----------------------------------------------------------------------
